<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (C) 2016 Felipe Joglar Santos

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">ETSIT Noticias</string>

    <!-- Activities titles related-->
    <string name="news_list_activity_title">Noticias</string>
    <string name="bookmarks_list_activity_title">Favoritos</string>
    <string name="news_details_activity_title">Noticia</string>
    <string name="settings_activity_title">Ajustes</string>
    <string name="search_activity_title">Buscar: \"<xliff:g id="query" example="example">%s</xliff:g>\"</string>
    <string name="about_activity_title">Acerca de</string>

    <!-- Category related strings -->
    <string name="category_general">General</string>
    <string name="category_beca">Beca/Empleo</string>
    <string name="category_tfg">TFG/TFM</string>
    <string name="category_conferencia">Conferencia/Taller</string>
    <string name="category_destacado">Destacado</string>
    <string name="category_junta">Junta de Escuela</string>
    <string name="category_investigacion">Investigación</string>
    <string name="category_otros">Otros</string>

    <!-- DetailView Strings-->
    <string name="more_info">Más información</string>
    <string name="attachments">Archivos adjuntos</string>
    <string name="action_share_title">Compartir con&#8230;</string>

    <!-- Menus Strings-->
    <string name="action_settings">Ajustes</string>
    <string name="action_about">Acerca de</string>
    <string name="action_filter">Filtrar</string>
    <string name="action_share">Compartir</string>
    <string name="action_bookmark">Añadir a favoritos</string>
    <string name="action_search">Buscar</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">etsitnoticias.fjoglar.com</string>
    <string name="content_authority">com.fjoglar.etsitnoticias</string>

    <!-- SharedPreferences related-->
    <string name="pref_last_updated_key" translatable="false">last_updated</string>
    <string name="pref_first_start_key" translatable="false">first_start</string>
    <string name="pref_last_search_query_key" translatable="false">last_search_query</string>
    <string name="booting_key" translatable="false">booting</string>

    <string name="pref_filter_1_key" translatable="false">destacados</string>
    <string name="pref_filter_2_key" translatable="false">generales</string>
    <string name="pref_filter_3_key" translatable="false">conferencias</string>
    <string name="pref_filter_4_key" translatable="false">becas_practicas_empleo</string>
    <string name="pref_filter_5_key" translatable="false">tfg_tfm</string>
    <string name="pref_filter_6_key" translatable="false">junta_escuela</string>
    <string name="pref_filter_7_key" translatable="false">investigacion</string>
    <string name="pref_filter_8_key" translatable="false">otros</string>

    <!-- Empty state related-->
    <string name="retry_message">Volver a intentar</string>
    <string name="back_to_news_message">Volver a noticias</string>
    <string name="open_filter_message">Abrir filtro</string>
    <string name="no_internet_msg">¡Ups! Parece que no tienes conexión.</string>
    <string name="no_internet_msg_short">No tienes conexión</string>
    <string name="no_internet_msg_hint">Prueba a activar el Wi-Fi o tus datos y vuelve a intentarlo.</string>
    <string name="no_news_msg">¡Eyy! No hay noticias que mostrarte</string>
    <string name="no_news_msg_hint">Prueba a modificar el filtro para ver noticias que te interesen.</string>
    <string name="no_bookmarks_msg">Tu lista de favoritos está vacía.</string>
    <string name="no_bookmarks_msg_hint">Vuelve al listado de noticias para añadirlas a tus favoritos.</string>
    <string name="no_search_msg">¡Vaya! No hay resultados.</string>
    <string name="no_searh_msg_hint">No hemos encontrado nada para\n\"<xliff:g id="query" example="example">%s</xliff:g>\"</string>

    <!-- Filter Drawer related-->
    <string name="filter_title">Filtros</string>
    <string name="filter_1">Avisos destacados</string>
    <string name="filter_2">Avisos generales</string>
    <string name="filter_3">Conferencias/Charlas/Talleres</string>
    <string name="filter_4">Ofertas de Becas/Prácticas/Empleo</string>
    <string name="filter_5">Avisos y Ofertas de TFG/TFM</string>
    <string name="filter_6">Junta de Escuela</string>
    <string name="filter_7">Investigación</string>
    <string name="filter_8">Otros</string>

    <!-- Settings related -->
    <string name="pref_sync_frequency_key" translatable="false">sync_frequency</string>
    <string name="pref_sync_frequency_label">Frecuencia de sincronización</string>
    <string name="pref_sync_frequency_label_one">Cada hora</string>
    <string name="pref_sync_frequency_label_three">Cada 3 horas</string>
    <string name="pref_sync_frequency_label_six">Cada 6 horas</string>
    <string name="pref_sync_frequency_label_twelve">Cada 12 horas</string>
    <string name="pref_sync_frequency_label_twenty_four">Cada día</string>

    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Notificaciones</string>

    <string name="notifications_title">Notificaciones</string>
    <string name="webs_title">Webs de interés</string>

    <!-- Search -->
    <string name="search_hint">Buscar noticias</string>

    <!-- About -->
    <string name="info_version_name">Versión <xliff:g id="version_name" example="example">%s</xliff:g></string>
    <string name="about_images">
        Todos los logotipos e imágenes de la ETSIT y AITCyL usadas en esta aplicación, así como sus
        modificaciones y su uso en el icono de la aplicación son propiedad de la ETSIT de la UVa y
        AITCyL.
        \n\n
        Las ilustraciones utilizadas forman parte de la colección \"Astronomy &amp; Space Icons\"
        creada por Dale Humphries.
    </string>
    <string name="about_etsit_news">
        Aplicación ganadora del concurso a la mejor app de noticias de la ETSIT – AITCYL en
        Diciembre de 2015.
        \n\n
        Diseñada y desarrollada por Felipe Joglar Santos.
        \n\n
        El código fuente está disponible en GitHub.
    </string>
    <string name="about_libs_intro">ETSIT Noticias se ha construido con la ayuda de estas increibles
    librerías y proyectos</string>
    <string name="about_lib_link">WebSite</string>
    <string name="github_link">GitHub</string>
    <string name="etsit_web">ETSIT web</string>
    <string name="aitcyl_web">AITCyL web</string>

</resources>
