<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (C) 2016 Felipe Joglar Santos

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/about_header_height"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:paddingEnd="@dimen/padding_normal"
            android:paddingStart="@dimen/padding_normal"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="45sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:lineSpacingMultiplier="1.2"
            android:paddingEnd="@dimen/padding_normal"
            android:paddingStart="@dimen/padding_normal"
            android:paddingTop="24dp"
            android:text="@string/about_etsit_news"
            android:textSize="16sp" />

        <Button
            android:id="@+id/github_link"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/github_link"
            android:theme="@style/ButtonAccent" />

    </LinearLayout>

</ScrollView>